Add AOuth 2.0 with Googe provider

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,6 +1,11 @@
 app.name=XKE
 
-login.title=XKE - login
+auth.page.title=XKE - login
+auth.with.google=Sign in
+auth.error.user.creation=An error occured while creating your account. Please contact the n00b who codes this app.
+auth.invalid.email=You must use your xebia account to sign in
+
+error.title=Bouahhhhhhhh !
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
