--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,9 +1,8 @@
-app.name=XKE
+app.name=AppName
 
-auth.page.title=XKE - login
-auth.with.google=Sign in
+auth.page.title=AppName - login
+auth.with.google=Sign in with Google
 auth.error.user.creation=An error occured while creating your account. Please contact the n00b who codes this app.
-auth.invalid.email=You must use your xebia account to sign in
 
 error.title=Bouahhhhhhhh !
 
